added auth support
